--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,5 @@ keywords = ["mysql", "sql", "pool", "database","r2d2"]
 
 
 [dependencies]
-rustc-serialize = "~0.3.22"
-r2d2 = "0.7.1"
-
-[dependencies.mysql]
-version = "8.0.0"
-default-features = false
+r2d2 = "0.7.2"
+mysql = "11.0.0"
